libs/pavex_cli/tests/ui_tests/invalid_callable_path/expectations/stderr.txt
Error: 
  × `my_f,` is not a valid import path.
    ╭─[src/lib.rs:10:1]
 10 │     };
 11 │     bp.route(callable, "/home");
    ·              ────┬───
    ·                  ╰── The invalid import path was registered here
 12 │     bp
    ╰────